@@ -11,7 +11,5 @@ SHOW SITE NAME="Show Site Name"
 SHOW THE SITE NAME IN THE TEMPLATE HEADER="Show the site name in the template header"
 USE ROUNDED CORNERS="Use Rounded Corners"
 BIGGER TEXT="Bigger Text"
-TURN ON TO INCREASE SIZE OF TEXT="Turn on to increase size of text"
 HIGH CONTRAST="High Contrast"
-TURN ON FOR HIGH-CONTRAST VERSION="Turn on for high-contrast version"
 
